--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -6,7 +6,7 @@
 .wp-block-template-part:has(> .is-position-sticky) {
 	position: sticky;
 	top: calc(0px + var(--wp-admin--admin-bar--position-offset, 0px));
-	z-index: 20;
+	z-index: var(--wt--style--sticky--z-index, 20);
 
 	html :where(&) {
 		--wp-admin--admin-bar--position-offset: var(
